# bots-team

./: .gitignore  README.md  main.py  pyproject.toml
src/bots_team/: main.py
src/bots_team/handlers/: handlers.py  handlers_address.py  handlers_birthday.py  handlers_contact.py  handlers_email.py  handlers_note.py  handlers_tags.py
src/bots_team/models/: notes.py  record.py  storage.py
src/data/: addressbook.pkl
src/handlers/: handlers.py  handlers_address.py  handlers_birthday.py  handlers_contact.py  handlers_email.py  handlers_note.py  handlers_tags.py  utils.py
src/models/: address_book.py  classNotes.py  fields.py  notes.py  record.py  storage.py
tests/: test_addressbook  test_fields.py  test_handlers.py  test_notes.py  test_record.py  test_tags.py  test_utils.py
