[project]
name = "bots-team"
version = "0.1.0"
description = "A command-line assistant bot for managing contacts and notes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "bots-team"}
]
dependencies = [
  "prompt_toolkit"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bots = "bots_team.main:main"